--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,15 @@
   <div class="wrapper">
 
     <center>
-        
+        <!--
 		<p><a class="link" href="{{ site.baseurl }}/archive/">Archive</a> /
 		<a class="link" href="{{ site.baseurl }}/category/">Category</a> / 
 		<a class="link" href="{{ site.baseurl }}/tags/">Tags</a> / 
 		<a class="link" href="{{ site.baseurl }}/about/">About</a> /
 		<a class="link" href="{{ site.baseurl }}/contact/">Contact</a>
+
+	-->
+	    
         </p>
 
         <span><script>document.write(new Date().getFullYear());</script></span>
@@ -16,7 +19,7 @@
         
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
 		<br>
-		<span>Theme &copy; <a class="link" href="https://twitter.com/itisbenjamin1" target="_blank"> Ben</a> | </span>
+		<span>Theme &copy; <a class="link" href="https://twitter.com/itisbenjamin1" target="_blank"> WoodsMedia</a> | </span>
 				<iframe
 			style="margin-left: 2px; margin-bottom:-5px;"
 			frameborder="0" scrolling="0" width="91px" height="20px"
