--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
         
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
 		<br>
-		<span>Theme &copy; <a class="link" href="https://twitter.com/itisbenjamin1" target="_blank"> Ben</a> | </span>
+		<span>Theme &copy; <a class="link" href="{{ site.baseurl }}" target="_blank"> WoodsMedia</a> | </span>
 				<iframe
 			style="margin-left: 2px; margin-bottom:-5px;"
 			frameborder="0" scrolling="0" width="91px" height="20px"
