--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,11 +22,12 @@
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
 		<br>
 		<span>Theme &copy; <a class="link" href="{{ site.baseurl }}" target="_blank"> WoodsMedia</a> | </span>
-				<iframe
+				<!-- <iframe
 			style="margin-left: 2px; margin-bottom:-5px;"
 			frameborder="0" scrolling="0" width="91px" height="20px"
 			src="https://ghbtns.com/github-btn.html?user=itisbenjamin&repo=Nice_Blog&type=star&count=true" >
 		</iframe>
+		-->
 
     </center>
     
