--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
         
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
 		<br>
-	  <h3> Contact: alexbirchmedia@gmail.com</h3>
+	  <h3 class="index-content"> Contact: alexbirchmedia@gmail.com</h3>
 	  
 	  <!--
 		<span>Theme &copy; <a class="link" href="{{ site.baseurl }}" target="_blank"> WoodsMedia</a> | </span>
