--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 <!-- Google font -->
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto Sans">
+  <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
 
 <!-- font awesome -->
 
