--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,8 +20,9 @@
         <span>&copy;</span>
         
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
-		<br>
-	  <p class="index-content"> Contact: alexbirchmedia@gmail.com</p>
+		<br />
+	  	<br />
+	 	<p> Contact: alexbirchmedia@gmail.com</p>
 	  
 	  <!--
 		<span>Theme &copy; <a class="link" href="{{ site.baseurl }}" target="_blank"> WoodsMedia</a> | </span>
